name:                tau-sigma
version:             0.4.0
synopsis:            A command-line utility for frequency stability analysis.
license:             BSD3
license-file:        LICENSE
author:              Luis Casillas <luis@casillas.org>
maintainer:          luis@casillas.org
copyright:           Copyright (c) 2015 Luis Casillas
category:            Math
build-type:          Simple
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  Ghc-Options:         -Wall -O -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes

  exposed-modules:     TauSigma.ADEV
                     , TauSigma.Chart
                     , TauSigma.Convert
                     , TauSigma.Noise
                     , TauSigma.Types
                     , TauSigma.Statistics.Allan
                     , TauSigma.Statistics.Hadamard
                     , TauSigma.Statistics.Theo1
                     , TauSigma.Statistics.Total
                     , TauSigma.Statistics.Types
                     , TauSigma.Statistics.Util
                     , TauSigma.Util.CSV
                     , TauSigma.Util.Pipes
                     , TauSigma.Util.Pipes.Noise
                     , TauSigma.Util.Vector

  build-depends:       Chart 
                     , Chart-diagrams 
                     , base >=4.7 && <5
                     , bytestring 
                     , cassava 
                     , data-default 
                     , deepseq
                     , filepath 
                     , lens 
                     , mtl 
                     , mwc-random
                     , mwc-random-monad
                     , monad-primitive
                     , optparse-applicative 
                     , pipes 
                     , pipes-bytestring
                     , pipes-csv
                     , primitive
                     , semigroups
                     , tagged
                     , transformers
                     , vector


executable tau-sigma
  default-language:    Haskell2010
  hs-source-dirs:      app
  Ghc-Options:         -Wall -O
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , mtl
                     , tau-sigma
                     , transformers
                     , optparse-applicative

  
Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      test
  Ghc-Options:         -Wall -O
  Main-Is:             Spec.hs
  Build-Depends:       base >=4.7 && <5
                     , data-default 
                     , hspec
                     , mwc-random
                     , mwc-random-monad
                     , pipes 
                     , primitive
                     , QuickCheck
                     , tagged
                     , tau-sigma 
                     , vector

Benchmark bench
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      bench
  Ghc-Options:         -Wall -O -rtsopts -fprof-auto
  Main-Is:             Bench.hs
  Build-Depends:       base >=4.7 && <5
                     , criterion
                     , mwc-random
                     , mwc-random-monad
                     , pipes
                     , primitive
                     , tagged
                     , tau-sigma 
                     , vector
