name:                tau-sigma
version:             0.6.0
synopsis:            A command-line utility for frequency stability analysis.
license:             BSD3
license-file:        LICENSE
author:              Luis Casillas <luis@casillas.org>
maintainer:          luis@casillas.org
copyright:           Copyright (c) 2015 Luis Casillas
category:            Math
build-type:          Simple
cabal-version:       >=1.10


Flag core
  Description: Dump GHC Core when compiling
  Default:     False

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  if flag(core)
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  else
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O

  exposed-modules:     TauSigma.ADEV
                     , TauSigma.Chart
                     , TauSigma.Convert
                     , TauSigma.Noise
                     , TauSigma.Types
                     , TauSigma.Statistics.Allan
                     , TauSigma.Statistics.Hadamard
                     , TauSigma.Statistics.Theo1
                     , TauSigma.Statistics.Total
                     , TauSigma.Statistics.Types
                     , TauSigma.Statistics.Util
                     , TauSigma.Util.CSV
                     , TauSigma.Util.Pipes
                     , TauSigma.Util.Pipes.Noise
                     , TauSigma.Util.Vector

  build-depends:       Chart 
                     , Chart-diagrams 
                     , arithmoi
                     , base >=4.7 && <5
                     , bytestring 
                     , cassava 
                     , data-default 
                     , deepseq
                     , filepath 
                     , lens 
                     , mtl 
                     , math-functions
                     , mwc-random
                     , optparse-applicative 
                     , parallel
                     , pipes 
                     , pipes-bytestring
                     , pipes-csv
                     , primitive
                     , random-fu
                     , random-source
                     , semigroups
                     , tagged
                     , transformers
                     , vector


executable tau-sigma
  default-language:    Haskell2010
  hs-source-dirs:      app
  Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , mtl
                     , tau-sigma
                     , transformers
                     , optparse-applicative

  
Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      test
  if flag(core)
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  else
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O
  Main-Is:             Spec.hs
  Build-Depends:       base >=4.7 && <5
                     , data-default 
                     , hspec
                     , pipes 
                     , primitive
                     , QuickCheck
                     , random-fu
                     , random-source
                     , tagged
                     , tau-sigma 
                     , vector

Benchmark bench
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      bench
  if flag(core)
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O -threaded -rtsopts -with-rtsopts=-N -fprof-auto -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  else
    Ghc-Options:         -Wall -fno-warn-type-defaults -fno-warn-name-shadowing -O -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  Main-Is:             Bench.hs
  Build-Depends:       base >=4.7 && <5
                     , criterion
                     , parallel
                     , pipes
                     , primitive
                     , random-fu
                     , random-source
                     , tagged
                     , tau-sigma 
                     , vector

